--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,15 @@ jobs:
 
       - name: Install composer and dependencies
         uses: php-actions/composer@v6
+        with:
+          working_dir: ./php-fpm
 
       - name: Run PHPStan checks
         uses: php-actions/phpstan@v3
         with:
           version: composer
           php_version: 8.4
-          configuration: ./phpstan.neon
+          configuration: ./php-fpm/phpstan.neon
 
   pint:
     runs-on: ubuntu-latest
@@ -39,3 +41,4 @@ jobs:
           useComposer: true
           testMode: true
           verboseMode: true
+          configPath: ./php-fpm/pint.json
