--- a/php-fpm/composer.json
+++ b/php-fpm/composer.json
@@ -20,7 +20,6 @@
         "doctrine/orm": "^3.5",
         "doctrine/migrations": "^3.9",
         "php-di/php-di": "^7.0",
-        "vlucas/phpdotenv": "^5.6",
         "symfony/cache": "^7.3",
         "symfony/console": "^7.3",
         "nikic/php-parser": "^5.5"
@@ -29,6 +28,7 @@
         "doctrine/data-fixtures": "^2.0",
         "fakerphp/faker": "^1.24",
         "phpstan/phpstan": "^2.1",
-        "laravel/pint": "^1.24"
+        "laravel/pint": "^1.24",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
