--- a/php-fpm/composer.json
+++ b/php-fpm/composer.json
@@ -10,7 +10,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "olml89\\MyTheresaTest\\": "src/"
+            "olml89\\MyTheresaTest\\": "src/",
+            "Tests\\Unit\\": "tests/Unit"
         }
     },
     "minimum-stability": "stable",
@@ -29,6 +30,11 @@
         "fakerphp/faker": "^1.24",
         "phpstan/phpstan": "^2.1",
         "laravel/pint": "^1.24",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "phpunit/phpunit": "^12.2",
+        "phpstan/phpstan-strict-rules": "^2.0",
+        "phpstan/phpstan-phpunit": "^2.0",
+        "phpstan/phpstan-mockery": "^2.0",
+        "mockery/mockery": "^1.6"
     }
 }
