--- a/php-fpm/composer.json
+++ b/php-fpm/composer.json
@@ -23,7 +23,9 @@
         "php-di/php-di": "^7.0",
         "symfony/cache": "^7.3",
         "symfony/console": "^7.3",
-        "nikic/php-parser": "^5.5"
+        "nikic/php-parser": "^5.5",
+        "ramsey/uuid": "^4.9",
+        "ramsey/uuid-doctrine": "^2.1"
     },
     "require-dev": {
         "doctrine/data-fixtures": "^2.0",
