Implementation of ListProductsUseCase and refactorization
- To filter Products by price before Discounts we needed to access the original Price of the Product, instead of calculating the discounted Price on the fly on price()
- Prices are now OriginalPrices, implementation of DiscountedPrices that act as a wrapper around OriginalPrices, they hold the Discount until the moment of calculation
- Products now return OriginalPrice in price() and DiscountedPrice in discountedPrice(), this improves traceability

--- a/php-fpm/phpunit.xml.dist
+++ b/php-fpm/phpunit.xml.dist
@@ -24,6 +24,7 @@
 
     <source>
         <include>
+            <directory suffix=".php">src/Product/Application</directory>
             <directory suffix=".php">src/Product/Domain</directory>
         </include>
     </source>
