Implementation of a /products endpoint
- Implementation of Doctrine repositories to fetch data from the database
- Implementation of a Specification pattern that translates to Doctrine criteria to filter results

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -30,7 +30,7 @@ services:
       - mytheresa-test-network
 
   postgres:
-    container_name: mytheresa_test_network
+    container_name: mytheresa_test_postgres
     image: postgres:17-alpine
     environment:
       POSTGRES_DB: ${DB_NAME}
