--- a/php-fpm/composer.json
+++ b/php-fpm/composer.json
@@ -11,7 +11,8 @@
     "autoload": {
         "psr-4": {
             "olml89\\MyTheresaTest\\": "src/",
-            "Tests\\Unit\\": "tests/Unit"
+            "Tests\\Unit\\": "tests/Unit",
+            "Tests\\Integration\\": "tests/Integration"
         }
     },
     "minimum-stability": "stable",
